Fixed the broken styles
Updated the CSP so that the video can play.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -112,7 +112,8 @@ a:active {
 	color: var(--link-active-colour);
 }
 
-img {
+img,
+video {
 	max-width: 100%;
 	height: auto;
 }
